--- a/src/config/CMakeLists.txt
+++ b/src/config/CMakeLists.txt
@@ -230,6 +230,9 @@ set(ENABLE_WALLET ${BUILD_BITCOIN_WALLET})
 # Activate ZeroMQ
 set(ENABLE_ZMQ ${BUILD_BITCOIN_ZMQ})
 
+# Activate Chronik
+set(ENABLE_CHRONIK ${BUILD_BITCOIN_CHRONIK})
+
 # Try to find libqrencode
 # Only used in the wallet GUI
 if(ENABLE_QRCODE AND BUILD_BITCOIN_WALLET AND BUILD_BITCOIN_QT)
