--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -176,6 +176,7 @@ add_boost_unit_tests_to_suite(bitcoin test_bitcoin
 		merkle_tests.cpp
 		merkleblock_tests.cpp
 		miner_tests.cpp
+		mitra_serialize_tests.cpp
 		monolith_opcodes_tests.cpp
 		multisig_tests.cpp
 		net_peer_eviction_tests.cpp
